<resources>
    <string name="app_name">android security</string>
    <string name="title_npa">NPA</string>
    <string name="title_apk">APK</string>
    <string name="title_report">Report</string>
    <string name="activate_admin">Enable Admin</string>
    <string name="activate_kpe">Activate License</string>
    <string name="button_sort_name">Sort by name</string>
    <string name="button_sort_score">Sort by score</string>
    <string name="message_no_application">Select an application to view its permissions</string>
    <string name="message_no_permission">Great ! This application requires no permission.\n\n
               It means that there is no ads, and it\'s totally secure.\n\n
               To encourage this kind of application,\n give them a good rating on the Google Play Store.\n
               </string>
    <string name="asset_help">help.html</string>

    <string name="message_error_open">Sorry, unable to open this application !</string>
    <string name="message_error_market">Sorry, unable to access to the Google Play Store !</string>
    <string name="dialog_title_select_permission">Select a permission</string>

    <!-- Accessibility -->
    <string name="iv_application_logo">Application\'s logo : a shield with a checkered heart shape</string>
    <string name="iv_indicator_score">Score led indicator</string>
    <string name="iv_indicator_name">Name led indicator</string>
    <string name="iv_indicator_trusted">Trusted led indicator</string>
    <string name="iv_indicator_filter">Filter led indicator</string>
    <string name="iv_button_trusted">Trusted button icon</string>
    <string name="iv_button_filter">Filter button icon</string>
    <string name="iv_application_icon">Current application icon</string>
    <string name="iv_score_icon">Score icon (heart or dangerous)</string>
    <string name="iv_danger_icon">Dangerous icon (heart or dangerous)</string>

    <string name="message_untrust">The application has been removed from the trusted list!</string>
    <string name="message_trust">The application has been added to the trusted list!</string>

    <string name="pref_title">Preferences</string>
    <string name="pref_display_subtitle">Display</string>
    <string name="checkbox_theme_dark">Theme Dark</string>

    <string name="menu_help">Help</string>
    <string name="menu_credits">About</string>
    <string name="menu_preferences">Settings</string>
</resources>
