<?xml version="1.0" encoding="utf-8"?>
<TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/table_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableRow>

        <TextView style="@style/text_bar"
            android:id="@+id/button_sort_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/button_sort_score" />

        <TextView style="@style/text_bar"
            android:id="@+id/button_sort_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/button_sort_name" />

        <ImageView
            android:contentDescription="@string/iv_button_trusted"
            android:id="@+id/button_show_trusted"
            android:src="@drawable/trusted_indicator"
            android:paddingTop="@dimen/padding_text"
            android:paddingBottom="@dimen/padding_text"
            android:paddingLeft="@dimen/padding_icon"
            android:paddingRight="@dimen/padding_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:contentDescription="@string/iv_button_filter"
            android:id="@+id/button_filter"
            android:src="@drawable/filter_indicator"
            android:paddingTop="@dimen/padding_text"
            android:paddingBottom="@dimen/padding_text"
            android:paddingLeft="@dimen/padding_icon"
            android:paddingRight="@dimen/padding_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </TableRow>
    <TableRow>

        <ImageView style="@style/image_bar"
            android:contentDescription="@string/iv_indicator_score"
            android:id="@+id/indicator_score"
            android:background="@drawable/bar_on"
            android:layout_width="0dp"
            android:layout_height="@dimen/bar_height"
            android:layout_weight="3" />
        <ImageView style="@style/image_bar"
            android:contentDescription="@string/iv_indicator_name"
            android:id="@+id/indicator_name"
            android:background="@drawable/bar_off"
            android:layout_width="0dp"
            android:layout_height="@dimen/bar_height"
            android:layout_weight="3" />
        <ImageView style="@style/image_bar"
            android:contentDescription="@string/iv_indicator_trusted"
            android:id="@+id/indicator_trusted"
            android:background="@drawable/bar_on"
            android:layout_width="0dp"
            android:layout_height="@dimen/bar_height"
            android:layout_weight="1" />
        <ImageView style="@style/image_bar"
            android:contentDescription="@string/iv_indicator_filter"
            android:id="@+id/indicator_filter"
            android:background="@drawable/bar_on"
            android:layout_width="0dp"
            android:layout_height="@dimen/bar_height"
            android:layout_weight="1" />

    </TableRow>

</TableLayout>